feat: tighten backend access controls and photo cleanup